<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/tv_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create an Account"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_heading"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            >



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_first_name"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.7"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                >

                <EditText
                    android:id="@+id/et_first_name"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/first_name"
                    android:backgroundTint="@color/Royal_Blue"
                    android:textColorHint="@color/black"
                    android:textColor="@color/white"
                    android:inputType="text"
                    android:minHeight="48dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_last_name"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.7"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/layout_first_name"
                >

                <EditText
                    android:id="@+id/et_last_name"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/last_name"
                    android:backgroundTint="@color/Royal_Blue"
                    android:textColorHint="@color/black"
                    android:textColor="@color/white"
                    android:inputType="text"
                    android:minHeight="48dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.7"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/layout_last_name"
                >

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/email"
                    android:backgroundTint="@color/Royal_Blue"
                    android:textColorHint="@color/black"
                    android:textColor="@color/white"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.7"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/layout_email"
                >

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/password"
                    android:backgroundTint="@color/Royal_Blue"
                    android:textColorHint="@color/black"
                    android:textColor="@color/white"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_repeat_password"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.7"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/layout_password"
                >

                <EditText
                    android:id="@+id/et_repeat_password"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/repeat_password"
                    android:backgroundTint="@color/Royal_Blue"
                    android:textColor="@color/white"
                    android:textColorHint="@color/black"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/bt_register"
                android:layout_width="0dp"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@+id/layout_repeat_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="Sign Up"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:background="@color/Royal_Blue"
                android:textAllCaps="false"
                android:layout_marginTop="30dp"
                app:layout_constraintWidth_percent="0.7"
                style="?android:attr/borderlessButtonStyle"
                android:elevation="2dp"
                android:onClick="performSignUp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>